--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 <body>
     <div class="container-grid">
-        <h1 class="titulo">¿Te gustaría visitar a los pinguinos?</h1>
-        <div class="boton-grid">
-            <button class="boton-pag-principal">Haz click aca</button>
-        </div>
+        <h1 class="titulo">¿Te gustaría visitar a los pinguinos en Chile?</h1>
+        <p class="texto-index">Haz click aquí ↓</p>
+            <a href="/src/views/chile.html">
+                <img src="/src/assets/img/—Pngtree—vector illustration watercolor set of_7286054.png" width="500">
+            </a>
     </div>
 </body>
 </html>
