barraa de navegacion

--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
     <link rel="stylesheet" href="src/assets/styles/estilos.css" />
 </head>
 <body>
+    <header>
+        <nav class="navegacion">
+            <ul class="menu">
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Tipo de pinguinos</a></li>
+                <li><a href="#">Epoca para visitarlos</a>
+                    <ul class="submenu">
+                        <li><a href="#">Ene a Mar</a></li>
+                        <li><a href="#">Abr a Jun</a></li>
+
+                    </ul>
+                </li>
+                <li><a href="#">Pinguino mas rapido</a></li>
+
+
+            </ul>
+        </nav>
+    </header>
+
+
+
     <div class="container-grid">
         <h1 class="titulo">¿Te gustaría visitar a los pinguinos en Chile?</h1>
         <p class="texto-index">Haz click aquí ↓</p>
