barra de navegacion 1

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
                 <li><a href="#">Tipo de pinguinos</a></li>
                 <li><a href="#">Epoca para visitarlos</a>
                     <ul class="submenu">
-                        <li><a href="#">Ene a Mar</a></li>
-                        <li><a href="#">Abr a Jun</a></li>
+                        <li><a href="#">Enero-Febrero-Marzo</a></li>
+                        <li><a href="#">Abril-Mayo-Junio</a></li>
+                        <li><a href="#">Julio-Agosto-Septiembre</a></li>
+                        <li><a href="#">Octubre-Noviembre-Diciembre</a></li>
 
                     </ul>
                 </li>
