barra de navegacion 3

--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
             <ul class="menu">
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Tipo de pinguinos</a></li>
+                    <ul class="submenu">
+                        <li><a href="#">Barbijo</a></li>
+                        <li><a href="#">Emperador</a></li>
+                        <li><a href="#">Macaroni</a></li>
+                        <li><a href="#">Rey</a></li>
+                        <li><a href="#">Penacho Amarillo</a></li>
+                        <li><a href="#">Papua</a></li>
+                        <li><a href="#">Adelia</a></li>
+                        <li><a href="#">Magallanes</a></li>
+                        <li><a href="#">Humboldt</a></li>
+                    </ul>
                 <li><a href="#">Epoca para visitarlos</a>
                     <ul class="submenu">
                         <li><a href="#">Enero-Febrero-Marzo</a></li>
@@ -24,6 +35,9 @@
                     </ul>
                 </li>
                 <li><a href="#">Pinguino mas rapido</a></li>
+                    <ul class="submenu">
+                        <li><a href="#">Adelia (75km/h)</a></li>
+                    </ul>
 
 
             </ul>
