--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                     </ul>
                 <li><a href="#">Epoca para visitarlos</a>
                     <ul class="submenu">
-                        <li><a href="#">Enero-Febrero-Marzo</a></li>
-                        <li><a href="#">Abril-Mayo-Junio</a></li>
-                        <li><a href="#">Julio-Agosto-Septiembre</a></li>
-                        <li><a href="#">Octubre-Noviembre-Diciembre</a></li>
+                        <li><a href="src/views/epoca/epoca1.html">Enero-Febrero-Marzo</a></li>
+                        <li><a href="src/views/epoca/epoca2.html">Abril-Mayo-Junio</a></li>
+                        <li><a href="src/views/epoca/epoca3.html">Julio-Agosto-Septiembre</a></li>
+                        <li><a href="src/views/epoca/epoca4.html">Octubre-Noviembre-Diciembre</a></li>
 
                     </ul>
                 </li>
@@ -46,12 +46,33 @@
 
 
 
-    <div class="container-grid">
-        <h1 class="titulo">¿Te gustaría visitar a los pinguinos en Chile?</h1>
-        <p class="texto-index">Haz click aquí ↓</p>
-            <a href="/src/views/chile.html">
-                <img src="/src/assets/img/—Pngtree—vector illustration watercolor set of_7286054.png" width="500">
-            </a>
+    <div class="container-index">
+        <h1 class="titulo">Pingüinos</h1>
+        <div class="palito"></div>
+        <img class ="imagen-inicial" src="src/assets/img/Inicial.jpg">
+        <p class="texto-index">Los pingüinos pertenecen a un grupo de aves que no vuelan, y están adaptadas a la vida marina. 
+            Su dieta está compuesta principalmente de peces, pero también puede incluir crustáceos como el kril y cefalópodos como el calamar.
+            Los pingüinos poseen el  vientre claro y el dorso oscuro, como sistema de camuflaje para confundirse en el agua con la claridad de la luz del sol, o la oscuridad del fondo marino. 
+            En tierra firme son poco ágiles y andan tambaleándose verticalmente, con las alas abiertas para mantener el equilibrio y adaptadas para la natación, donde pueden llegar a alcanzar los 50 km/h.
+        </p>
+        <iframe width="800" height="600" src="https://www.youtube.com/embed/iukXyecoRJs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h2 class="titulo-2">¿Sabías qué?</h2>
+        <p class="texto-index">Los pingüinos no solo se encuentran en la Antártida. 
+            Es más, en Chile existen 9 especies diferentes que se reparten entre las costas chilenas y la península antártica. </p>
+        <h1 class="titulo">Fotos de pingüinos</h1>
+        <div class="palito"></div>
+        <div class="rueda-imagenes">
+            <ul>
+                <li><img src="src/assets/img/Barra movil 1.jpg"></li>
+                <li><img src="src/assets/img/Barra movil 2.jpg"></li>
+            </ul>
+        </div>
+        <h2 class="titulo-2">¿Te gustan los pingüinos y quieres visitarlos?</h2>
+        <p class="texto-index">Quieres ver pingüinos, no sabes dónde ni cómo, haz clic para descubrirlo y poder vivir una experiencia única junto a ellos. 
+        </p>
+        <a href="/src/views/intro.html">
+            <img src="/src/assets/img/—Pngtree—vector illustration watercolor set of_7286054.png" width="500">
+        </a>
     </div>
 </body>
 </html>
